--- a/source/scss/blocks/_welcome.scss
+++ b/source/scss/blocks/_welcome.scss
@@ -13,6 +13,11 @@
 	background-color: rgba(28,31,41,0.5);
 }
 
+.welcome__socials {
+	width: 138px;
+	margin: 0 auto;
+}
+
 .welcome__nav-wrapper {
 	display: flex;
 }
