--- a/source/pug/modules/welcome.pug
+++ b/source/pug/modules/welcome.pug
@@ -1,9 +1,10 @@
 section.welcome
-	.welcome__wrapper
-		.welcome__info
-			include ../modules/info-user
-			include ../modules/socials
-		nav.welcome__nav
-			.welcome__nav-wrapper
-				a.welcome__nav-link(href='portfolio.html') Мои работы
-				a.welcome__nav-link(href='about.html') Обо мне
+ .welcome__wrapper
+  .welcome__info
+   include ../modules/info-user
+   article.welcome__socials.socials
+    include ../modules/socials
+  nav.welcome__nav
+   .welcome__nav-wrapper
+    a.welcome__nav-link(href='works.html') Мои работы
+    a.welcome__nav-link(href='about.html') Обо мне
