--- a/source/scss/blocks/_socials.scss
+++ b/source/scss/blocks/_socials.scss
@@ -1,17 +1,13 @@
 .socials__wrapper {
 	width: 138px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+
 .socials__link-svg {
 	fill:$blue;
-
-	&:hover {
-		fill: $blueHover;
-	}
 
 	&--vk {
 		width: 31px;
@@ -28,4 +24,8 @@
 		width: 24px;
     	height: 22px;
 	}
+}
+
+.socials__link:hover .socials__link-svg {
+	fill:$blueHover;
 }
