--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -9,3 +9,7 @@
 @import 'blocks/_info-user';
 @import 'blocks/_socials';
 @import 'blocks/_copyright';
+@import 'blocks/_header';
+@import 'blocks/_navigation';
+@import 'blocks/_portfolio';
+@import 'blocks/_my-works';
